packages/css/src/components/actionbar.scss
.action-bar-wrap {
  box-shadow: rgba(0, 0, 0, 0.16) 0 -2px 8px;
  max-width: 480px;
  z-index: 100;

  @apply bottom-0 w-full bg-white py-sm px-sm fixed text-right;

  div {
    @apply w-full;
  }

  .menu-wrap {
    @apply absolute bg-white text-left mb-xs z-30;
    bottom: 45px;
    box-shadow: rgba(0, 0, 0, 0.14) 0 8px 10px 1px, rgba(0, 0, 0, 0.12) 0 3px 14px 2px, rgba(0, 0, 0, 0.2) 0 5px 5px -3px;
    width: calc(100% - 16px);
    right: 8px;

    div {
      @apply h-12 pl-sm py-md text-body-l text-text-primary;

      &:hover {
        @apply bg-grey-mid w-full;
      }
    }
  }
}

@screen dt {
  .action-bar-wrap {
    box-shadow: rgba(0, 0, 0, 0.16) 0 -2px 8px;
    left: 64px;
    width: calc(100% - 64px);
    max-width: none;
    z-index: 20;

    @apply fixed bottom-0 bg-white py-sm pr-lg text-right;

    div {
      width: calc(100% - 16px);
    }

    .menu-wrap {
      bottom: 45px;
      top: unset;
      box-shadow: rgba(0, 0, 0, 0.14) 0 8px 10px 1px, rgba(0, 0, 0, 0.12) 0 3px 14px 2px, rgba(0, 0, 0, 0.2) 0 5px 5px -3px;
      @apply absolute h-auto bg-white text-left mb-xs z-30;
      width: 240px;
      right: 24px;

      div {
        @apply h-12 pl-sm py-md text-body-l text-text-primary;

        &:hover {
          @apply bg-grey-mid w-full;
        }
      }
    }
  }
}

